# cp-booking-selenium

./: .env.example  .gitignore  .pre-commit-config.yaml  main.py  pyproject.toml  trip.example.json
cp/core/: config.py  constants.py  driver.py
cp/locators/: options.py  search.py  seats.py  service.py
cp/pages/: base_page.py  login_page.py  options_page.py  search_page.py  seats_page.py  service_page.py
tests/: conftest.py
tests/fast/: test_search.py  test_service.py
