[project]
name = "cp-booking-selenium"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic-settings>=2.10.1",
    "selenium>=4.35.0",
]

[dependency-groups]
dev = [
    "faker>=37.8.0",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
]
